adding th build comp function some more toml settings

--- a/project.toml
+++ b/project.toml
@@ -1,11 +1,15 @@
 title = "MPO 2 AE Tomlfile"
 projectname = "Testing Toml support"
+
 [comp]
 # w and h are in pixels
 width = 1920
 height = 1080
-# duration on seconds
+# duration in seconds
 duration = 20
+frameRate = 25
+pixelAspect = 1
+
 [comp.layerpresets]
 image = "myafx/image.afx"
 price = "myafx/price.afx" 
@@ -13,5 +17,18 @@ title = "myafx/title.afx"
 text = "myafx/text.afx"
 background = "myafx/background.afx"
 [comp.render]
+
 #needs some overview
 ommodule = ""
+
+[images]
+# w and h are in pixels
+width = 1920
+height = 1080
+# duration in seconds
+duration = 20
+frameRate = 25
+pixelAspect = 1
+
+[images.layerpresets]
+item = "myafx/image_item.afx"
